@@ -42,17 +42,26 @@
 
 -->
 
-<listitem>
+    <listitem>
       <para>April 18th, 2012</para>
       <itemizedlist>
         <listitem>
+          <para>[bdubbs] - Add cifs to stop procedure in nfs-server
+          boot script.  Fixes 
+          <ulink url="&blfs-ticket-root;3295">#3295</ulink>.</para>
+        </listitem>
+        <listitem>
+          <para>[bdubbs] - Remove kernel version check from netfs
+          boot script.</para>
+        </listitem>
+        <listitem>
           <para>[rthomsen] - Removed several Perl modules and updated the 
-	  remaining modules to most recent versions. Fixes 
-	  <ulink url="&blfs-ticket-root;2649">#2649</ulink>.</para>
+          remaining modules to most recent versions. Fixes 
+          <ulink url="&blfs-ticket-root;2649">#2649</ulink>.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Removed PDL. Fixes 
-	  <ulink url="&blfs-ticket-root;2141">#2141</ulink>.</para>
+          <ulink url="&blfs-ticket-root;2141">#2141</ulink>.</para>
         </listitem>
       </itemizedlist>
     </listitem>
@@ -62,7 +71,7 @@
       <itemizedlist>
         <listitem>
           <para>[rthomsen] - Replaced the unmaintained Pine by Re-alpine 2.0.2.
-	  Fixes <ulink url="&blfs-ticket-root;3312">#3312</ulink>.</para>
+          Fixes <ulink url="&blfs-ticket-root;3312">#3312</ulink>.</para>
         </listitem>
         <listitem>
           <para>[krejzi] - libgweather 3.4.1.</para>
@@ -200,30 +209,30 @@
         </listitem>
         <listitem>
           <para>[rthomsen] - Replace the use of the $QT4DIR variable with 
-	  $QTDIR, since only one version of Qt is currently in the book.</para>
+          $QTDIR, since only one version of Qt is currently in the book.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Added sed for compiling Qca with GCC 4.7. Thanks 
-	  to Pierre Labastie for the report.</para>
+          to Pierre Labastie for the report.</para>
         </listitem>
-	<listitem>
+   <listitem>
           <para>[rthomsen] - Added sed for compiling Strigi with GCC 4.7. Thanks 
-	  to Pierre Labastie for the report.</para>
+          to Pierre Labastie for the report.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Removed CLucene.</para>
-	</listitem>
+   </listitem>
         <listitem>
           <para>[rthomsen] - Upgrade to Soprano 2.7.5. Fixes 
           <ulink url="&blfs-ticket-root;3318">#3318</ulink>.</para>
-	</listitem>
-	<listitem>
+   </listitem>
+   <listitem>
           <para>[rthomsen] - Added KDE configuration for the system-wide D-Bus 
-	  daemon.</para>
+          daemon.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Fixed dependencies for VLC, Qt and Qca. Thanks 
-	  to Pierre Labastie for the report.</para>
+           to Pierre Labastie for the report.</para>
         </listitem>
       </itemizedlist>
     </listitem>
@@ -348,14 +357,14 @@
     <listitem>
       <para>April 6th, 2012</para>
       <itemizedlist>
-	<listitem>
+   <listitem>
           <para>[rthomsen] - Added wicd 1.7.1. Fixes 
-	  <ulink url="&blfs-ticket-root;3293">#3293</ulink>.</para>
+     <ulink url="&blfs-ticket-root;3293">#3293</ulink>.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Upgrade to dhcpcd 5.5.6 and improve the dhcpcd 
-	  network service script to provide a cleaner boot message. Fixes 
-	  <ulink url="&blfs-ticket-root;3290">#3290</ulink>.</para>
+          network service script to provide a cleaner boot message. Fixes 
+          <ulink url="&blfs-ticket-root;3290">#3290</ulink>.</para>
         </listitem>
         <listitem>
           <para>[rthomsen] - Disable building of libvpx static library.</para>
@@ -363,7 +372,7 @@
         <listitem>
           <para>[rthomsen] - Upgrade KDE section to 4.8.2.</para>
         </listitem>
-	<listitem>
+   <listitem>
           <para>[rthomsen] - Added Gwenview 4.8.2.</para>
         </listitem>
         <listitem>
@@ -392,8 +401,8 @@
       <itemizedlist>
         <listitem>
           <para>[rthomsen] - Upgrade to Virtuoso 6.1.5. Fixes 
-	  <ulink url="&blfs-ticket-root;3317">#3317</ulink>.</para>
-        </listitem>	
+          <ulink url="&blfs-ticket-root;3317">#3317</ulink>.</para>
+        </listitem>  
       </itemizedlist>
     </listitem>
 
@@ -402,9 +411,9 @@
       <itemizedlist>
         <listitem>
           <para>[rthomsen] - Upgrade to Qt 4.8.1 and add two patches. Fixes 
-	    <ulink url="&blfs-ticket-root;3320">#3320</ulink>.</para>
-        </listitem>	
-	<listitem>
+          <ulink url="&blfs-ticket-root;3320">#3320</ulink>.</para>
+        </listitem>  
+        <listitem>
           <para>[dj] - Xorg Applicatons require MesaLib. Fixes #3218.</para>
         </listitem>
         <listitem>
